@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #ADD1B2
    ArrowColor #2A2A2A
    BorderColor #2A2A2A
}

abstract class Command {
  # parser: Parser
  # ui: Ui
  + execute() : void
}

class ListCommand {
  - internshipList: InternshipList
  + execute() : void
}

class InternshipList {
  - internships: List<Internship>
  + add(internship: Internship) : void
  + delete(index: int) : void
  + get(index: int) : Internship
  + getInternships() : List<Internship>
  + getSize() : int
}

class Internship {
  - title: String
  - companyName: String
  - status: ApplicationStatus
  + getCompanyName() : String
  + getTitle() : String
  + toString() : String
}

Command <|-- ListCommand
ListCommand --> "1" InternshipList
InternshipList o--> "many" Internship
@enduml